--- a/src/VentanaAux/AdministradorProducto.fxml
+++ b/src/VentanaAux/AdministradorProducto.fxml
@@ -2,29 +2,42 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TabColor.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.AdministradorProductoController">
+<JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="443.0" prefWidth="630.0" stylesheets="@TabColor.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.AdministradorProductoController">
    <tabs>
       <Tab text="Productos">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
                <children>
-                  <TableView fx:id="tvProducto" layoutX="14.0" layoutY="14.0" prefHeight="331.0" prefWidth="551.0">
+                  <TableView fx:id="tvProducto" layoutX="-1.0" layoutY="29.0" prefHeight="382.0" prefWidth="636.0" stylesheets="@TabColor.css">
                     <columns>
                       <TableColumn fx:id="tabNombre" prefWidth="104.0" text="Nombre" />
-                      <TableColumn fx:id="tabDesc" prefWidth="224.0" text="Descripción" />
-                        <TableColumn fx:id="tabCanti" prefWidth="89.0" text="Cantidad" />
-                        <TableColumn fx:id="tabPrecio" prefWidth="133.0" text="Precio $" />
+                      <TableColumn fx:id="tabDesc" prefWidth="274.0" text="Descripción" />
+                        <TableColumn fx:id="tabCanti" prefWidth="125.0" text="Cantidad" />
+                        <TableColumn fx:id="tabPrecio" prefWidth="121.0" text="Precio $" />
                     </columns>
                   </TableView>
+                  <JFXTextField fx:id="search" focusColor="#4a407c" layoutX="-1.0" layoutY="2.0" prefHeight="25.0" prefWidth="588.0" style="-fx-background-color: #ffffff; -fx-border-radius: 20px;" unFocusColor="#ffffff00" />
+                  <JFXButton alignment="CENTER" buttonType="RAISED" layoutX="587.0" layoutY="-1.0" onMouseClicked="#searchEvent" prefHeight="31.0" prefWidth="43.0" text=" " textAlignment="RIGHT" textFill="TRANSPARENT">
+                     <graphic>
+                        <ImageView fitHeight="24.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Ventanas/imagenes/698956-icon-111-search-512.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
                </children></AnchorPane>
         </content>
       </Tab>
@@ -53,8 +66,8 @@
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="tNombre" layoutX="53.0" layoutY="44.0" prefHeight="25.0" prefWidth="316.0" />
-                  <TextArea fx:id="tDesc" layoutX="53.0" layoutY="101.0" prefHeight="92.0" prefWidth="510.0" />
+                  <TextField fx:id="tNombre" layoutX="53.0" layoutY="44.0" prefHeight="25.0" prefWidth="316.0" style="-fx-border-radius: 15px;" />
+                  <TextArea fx:id="tDesc" layoutX="53.0" layoutY="101.0" prefHeight="92.0" prefWidth="510.0" style="-fx-border-radius: 20px;" />
                   <TextField fx:id="tCant" layoutX="55.0" layoutY="210.0" prefHeight="25.0" prefWidth="101.0" />
                   <TextField fx:id="tPrecio" layoutX="56.0" layoutY="252.0" prefHeight="25.0" prefWidth="100.0" />
                </children>
