--- a/src/VentanaAux/AdministradorProducto.fxml
+++ b/src/VentanaAux/AdministradorProducto.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TableColumn?>
@@ -15,22 +16,24 @@
    <tabs>
       <Tab text="Productos">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="362.0" prefWidth="700.0" style="-fx-background-color: #FFDBD9;">
                <children>
-                  <TableView fx:id="tvProducto" layoutX="14.0" layoutY="14.0" prefHeight="331.0" prefWidth="551.0">
+                  <TableView fx:id="tvProducto" layoutX="1.0" layoutY="30.0" prefHeight="341.0" prefWidth="600.0" stylesheets="@TabColor.css">
                     <columns>
                       <TableColumn fx:id="tabNombre" prefWidth="104.0" text="Nombre" />
-                      <TableColumn fx:id="tabDesc" prefWidth="224.0" text="Descripción" />
-                        <TableColumn fx:id="tabCanti" prefWidth="89.0" text="Cantidad" />
-                        <TableColumn fx:id="tabPrecio" prefWidth="133.0" text="Precio $" />
+                      <TableColumn fx:id="tabDesc" prefWidth="274.0" text="Descripción" />
+                        <TableColumn fx:id="tabCanti" prefWidth="142.0" text="Cantidad" />
+                        <TableColumn fx:id="tabPrecio" prefWidth="75.0" text="Precio $" />
                     </columns>
                   </TableView>
+                  <JFXTextField fx:id="search" focusColor="#4a407c" layoutX="85.0" layoutY="2.0" prefHeight="25.0" prefWidth="513.0" style="-fx-background-color: #ffffff; -fx-border-radius: 20px;" unFocusColor="#ffffff00" />
+                  <Label layoutX="28.0" layoutY="6.0" prefHeight="17.0" prefWidth="38.0" text="Filtrar" />
                </children></AnchorPane>
         </content>
       </Tab>
       <Tab text="Agregar Producto">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="593.0" style="-fx-background-color: #FFDBD9;">
                <children>
                   <JFXButton fx:id="bAgregarProducto" layoutX="408.0" layoutY="313.0" onAction="#agregarProducto" prefHeight="36.0" prefWidth="169.0" style="-fx-background-color: #F9A29C;" text="Agregar" />
                   <Label layoutX="53.0" layoutY="27.0" text="Nombre:" textFill="#6d3743">
@@ -53,8 +56,8 @@
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="tNombre" layoutX="53.0" layoutY="44.0" prefHeight="25.0" prefWidth="316.0" />
-                  <TextArea fx:id="tDesc" layoutX="53.0" layoutY="101.0" prefHeight="92.0" prefWidth="510.0" />
+                  <TextField fx:id="tNombre" layoutX="53.0" layoutY="44.0" prefHeight="25.0" prefWidth="316.0" style="-fx-border-radius: 15px;" />
+                  <TextArea fx:id="tDesc" layoutX="53.0" layoutY="101.0" prefHeight="92.0" prefWidth="510.0" style="-fx-border-radius: 20px;" />
                   <TextField fx:id="tCant" layoutX="55.0" layoutY="210.0" prefHeight="25.0" prefWidth="101.0" />
                   <TextField fx:id="tPrecio" layoutX="56.0" layoutY="252.0" prefHeight="25.0" prefWidth="100.0" />
                </children>
