--- a/src/VentanaAux/AdministradorProducto.fxml
+++ b/src/VentanaAux/AdministradorProducto.fxml
@@ -10,6 +10,9 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TabColor.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.AdministradorProductoController">
@@ -60,6 +63,70 @@
                   <TextArea fx:id="tDesc" layoutX="53.0" layoutY="101.0" prefHeight="92.0" prefWidth="510.0" style="-fx-border-radius: 20px;" />
                   <TextField fx:id="tCant" layoutX="55.0" layoutY="210.0" prefHeight="25.0" prefWidth="101.0" />
                   <TextField fx:id="tPrecio" layoutX="56.0" layoutY="252.0" prefHeight="25.0" prefWidth="100.0" />
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+      <Tab text="Buscar producto">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
+               <children>
+                  <Label layoutX="28.0" layoutY="58.0" text="Ingresa nombre del producto a buscar:" textFill="#e06565">
+                     <font>
+                        <Font name="Arial Black" size="15.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="txtBuscar" focusColor="#407ea8" layoutX="399.0" layoutY="57.0" prefHeight="25.0" prefWidth="77.0" unFocusColor="#e06565" />
+                  <JFXButton fx:id="botonBuscar" layoutX="508.0" layoutY="69.0" onAction="#buscar" text="Buscar" textFill="#836969">
+                     <font>
+                        <Font name="Arial Black" size="12.0" />
+                     </font>
+                  </JFXButton>
+                  <GridPane layoutX="113.0" layoutY="115.0" prefHeight="198.0" prefWidth="374.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label text="Nombre" textFill="#e06565" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label text="Descripción" textFill="#e06565" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label text="Precio" textFill="#e06565" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="campoNombreBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="campoDesBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="campoPrecioBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label text="ID" textFill="#e06565">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label text="Cantidad" textFill="#e06565" GridPane.rowIndex="3">
+                           <font>
+                              <Font name="Arial Black" size="15.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="campoIDBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" />
+                        <Label fx:id="campoCanBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                     </children>
+                  </GridPane>
                </children>
             </AnchorPane>
         </content>
