--- a/src/VentanaAux/AdministradorProducto.fxml
+++ b/src/VentanaAux/AdministradorProducto.fxml
@@ -2,7 +2,6 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTabPane?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TableColumn?>
@@ -10,125 +9,95 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <JFXTabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@TabColor.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.AdministradorProductoController">
    <tabs>
       <Tab text="Productos">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="362.0" prefWidth="700.0" style="-fx-background-color: #FFDBD9;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
                <children>
-                  <TableView fx:id="tvProducto" layoutX="1.0" layoutY="30.0" prefHeight="341.0" prefWidth="600.0" stylesheets="@TabColor.css">
+                  <TableView fx:id="tvProducto" layoutX="14.0" layoutY="28.0" prefHeight="319.0" prefWidth="435.0">
                     <columns>
                       <TableColumn fx:id="tabNombre" prefWidth="104.0" text="Nombre" />
-                      <TableColumn fx:id="tabDesc" prefWidth="274.0" text="Descripción" />
-                        <TableColumn fx:id="tabCanti" prefWidth="142.0" text="Cantidad" />
-                        <TableColumn fx:id="tabPrecio" prefWidth="75.0" text="Precio $" />
+                      <TableColumn fx:id="tabDesc" prefWidth="168.0" text="Descripción" />
+                        <TableColumn fx:id="tabCanti" prefWidth="91.0" text="Cantidad" />
+                        <TableColumn fx:id="tabPrecio" prefWidth="69.0" text="Precio $" />
                     </columns>
                   </TableView>
-                  <JFXTextField fx:id="search" focusColor="#4a407c" layoutX="85.0" layoutY="2.0" prefHeight="25.0" prefWidth="513.0" style="-fx-background-color: #ffffff; -fx-border-radius: 20px;" unFocusColor="#ffffff00" />
-                  <Label layoutX="28.0" layoutY="6.0" prefHeight="17.0" prefWidth="38.0" text="Filtrar" />
+                  <JFXButton fx:id="bEdit" layoutX="505.0" layoutY="135.0" onAction="#colocarProducto" prefHeight="25.0" prefWidth="64.0" style="-fx-background-color: #F9A29C;" text="Editar" />
                </children></AnchorPane>
         </content>
       </Tab>
       <Tab text="Agregar Producto">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="371.0" prefWidth="593.0" style="-fx-background-color: #FFDBD9;">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
                <children>
                   <JFXButton fx:id="bAgregarProducto" layoutX="408.0" layoutY="313.0" onAction="#agregarProducto" prefHeight="36.0" prefWidth="169.0" style="-fx-background-color: #F9A29C;" text="Agregar" />
-                  <Label layoutX="53.0" layoutY="27.0" text="Nombre:" textFill="#6d3743">
+                  <Label layoutX="52.0" layoutY="48.0" text="Nombre:">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="53.0" layoutY="84.0" text="Descripción:" textFill="#6d3743">
+                  <Label layoutX="49.0" layoutY="93.0" text="Descripción:">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="55.0" layoutY="193.0" text="Cantidad:" textFill="#6d3743">
+                  <Label layoutX="50.0" layoutY="218.0" text="Cantidad:">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="58.0" layoutY="235.0" text="Precio:" textFill="#6d3743">
+                  <Label layoutX="58.0" layoutY="259.0" text="Precio:">
                      <font>
                         <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="tNombre" layoutX="53.0" layoutY="44.0" prefHeight="25.0" prefWidth="316.0" style="-fx-border-radius: 15px;" />
-                  <TextArea fx:id="tDesc" layoutX="53.0" layoutY="101.0" prefHeight="92.0" prefWidth="510.0" style="-fx-border-radius: 20px;" />
-                  <TextField fx:id="tCant" layoutX="55.0" layoutY="210.0" prefHeight="25.0" prefWidth="101.0" />
-                  <TextField fx:id="tPrecio" layoutX="56.0" layoutY="252.0" prefHeight="25.0" prefWidth="100.0" />
+                  <TextField fx:id="tNombre" layoutX="181.0" layoutY="44.0" />
+                  <TextArea fx:id="tDesc" layoutX="181.0" layoutY="93.0" prefHeight="78.0" prefWidth="151.0" />
+                  <TextField fx:id="tCant" layoutX="181.0" layoutY="214.0" />
+                  <TextField fx:id="tPrecio" layoutX="181.0" layoutY="255.0" />
                </children>
             </AnchorPane>
         </content>
       </Tab>
-      <Tab text="Buscar producto">
+      <Tab text="Editar Producto">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
                <children>
-                  <Label layoutX="28.0" layoutY="58.0" text="Ingresa nombre del producto a buscar:" textFill="#e06565">
+                  <TextField fx:id="eNombre" layoutX="180.0" layoutY="39.0" />
+                  <TextField fx:id="eCant" layoutX="179.0" layoutY="191.0" />
+                  <TextField fx:id="ePrecio" layoutX="180.0" layoutY="255.0" />
+                  <TextArea fx:id="eDesc" layoutX="178.0" layoutY="78.0" prefHeight="80.0" prefWidth="151.0" />
+                  <Label layoutX="70.0" layoutY="43.0" text="Nombre:">
                      <font>
-                        <Font name="Arial Black" size="15.0" />
+                        <Font name="System Bold Italic" size="12.0" />
                      </font>
                   </Label>
-                  <JFXTextField fx:id="txtBuscar" focusColor="#407ea8" layoutX="399.0" layoutY="57.0" prefHeight="25.0" prefWidth="77.0" unFocusColor="#e06565" />
-                  <JFXButton fx:id="botonBuscar" layoutX="508.0" layoutY="69.0" onAction="#buscar" text="Buscar" textFill="#836969">
+                  <Label layoutX="60.0" layoutY="101.0" text="Descripción:">
                      <font>
-                        <Font name="Arial Black" size="12.0" />
+                        <Font name="System Bold Italic" size="12.0" />
                      </font>
-                  </JFXButton>
-                  <GridPane layoutX="113.0" layoutY="115.0" prefHeight="198.0" prefWidth="374.0">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <Label text="Nombre" textFill="#e06565" GridPane.rowIndex="1">
-                           <font>
-                              <Font name="Arial Black" size="15.0" />
-                           </font>
-                        </Label>
-                        <Label text="Descripción" textFill="#e06565" GridPane.rowIndex="2">
-                           <font>
-                              <Font name="Arial Black" size="15.0" />
-                           </font>
-                        </Label>
-                        <Label text="Precio" textFill="#e06565" GridPane.rowIndex="4">
-                           <font>
-                              <Font name="Arial Black" size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="campoNombreBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label fx:id="campoDesBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="campoPrecioBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label text="ID" textFill="#e06565">
-                           <font>
-                              <Font name="Arial Black" size="15.0" />
-                           </font>
-                        </Label>
-                        <Label text="Cantidad" textFill="#e06565" GridPane.rowIndex="3">
-                           <font>
-                              <Font name="Arial Black" size="15.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="campoIDBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" />
-                        <Label fx:id="campoCanBuscar" text="Label" textFill="#8f2828" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                     </children>
-                  </GridPane>
-               </children>
-            </AnchorPane>
+                  </Label>
+                  <Label layoutX="67.0" layoutY="195.0" text="Cantidad:">
+                     <font>
+                        <Font name="System Bold Italic" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="75.0" layoutY="259.0" text="Precio:">
+                     <font>
+                        <Font name="System Bold Italic" size="12.0" />
+                     </font>
+                  </Label>
+                  <JFXButton fx:id="bEditarProducto" layoutX="406.0" layoutY="315.0" onAction="#editarProducto" prefHeight="35.0" prefWidth="148.0" style="-fx-background-color: #F9A29C;" text="Guardar" />
+                  <Label layoutX="382.0" layoutY="43.0" text="ID:">
+                     <font>
+                        <Font name="System Bold Italic" size="12.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="eID" layoutX="416.0" layoutY="39.0" prefHeight="25.0" prefWidth="80.0" />
+               </children></AnchorPane>
         </content>
       </Tab>
    </tabs>
