--- a/src/VentanaAux/AdminUsuario.fxml
+++ b/src/VentanaAux/AdminUsuario.fxml
@@ -21,9 +21,9 @@
          <tabs>
             <Tab text="Usuarios">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #FFDBD9;">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #5671D4;">
                      <children>
-                        <TableView fx:id="tablaUsuarios" layoutX="4.0" prefHeight="313.0" prefWidth="593.0">
+                        <TableView fx:id="tablaUsuarios" layoutX="-3.0" prefHeight="329.0" prefWidth="607.0" stylesheets="@TabUsuario.css">
                            <columns>
                               <TableColumn fx:id="columnaMatricula" prefWidth="112.0" text="Matrícula" />
                               <TableColumn fx:id="columnaNombre" prefWidth="223.0" text="Nombre" />
@@ -32,7 +32,7 @@
                               <TableColumn fx:id="columnaBloqueo" minWidth="3.0" prefWidth="72.0" text="Bloqueo" />
                            </columns>
                         </TableView>
-                        <JFXButton fx:id="btnEliminarUsu" layoutX="470.0" layoutY="329.0" onAction="#eventEliminarUsu" prefHeight="25.0" prefWidth="94.0" text="Eliminar" />
+                        <JFXButton fx:id="btnEliminarUsu" layoutX="472.0" layoutY="335.0" onAction="#eventEliminarUsu" prefHeight="25.0" prefWidth="94.0" style="-fx-background-color: #1976D2;" text="Eliminar" />
                      </children>
                   </AnchorPane>
                </content>
