--- a/src/VentanaAux/AdministradorMenu.fxml
+++ b/src/VentanaAux/AdministradorMenu.fxml
@@ -5,6 +5,8 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -15,7 +17,19 @@
    <tabs>
       <Tab text="Menu">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #E7CA9A;" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #E7CA9A;">
+               <children>
+                  <TableView fx:id="tablaMenu" layoutX="-1.0" layoutY="37.0" prefHeight="279.0" prefWidth="600.0">
+                    <columns>
+                      <TableColumn fx:id="colID" prefWidth="46.0" text="ID" />
+                      <TableColumn fx:id="colNombre" prefWidth="119.0" text="Nombre" />
+                        <TableColumn fx:id="colDes" prefWidth="232.0" text="Descripción" />
+                        <TableColumn fx:id="colTipo" prefWidth="60.0" text="Tipo" />
+                        <TableColumn fx:id="colDia" prefWidth="65.0" text="Dia" />
+                        <TableColumn fx:id="colPrecio" prefWidth="76.0" text="Precio" />
+                    </columns>
+                  </TableView>
+               </children></AnchorPane>
         </content>
       </Tab>
       <Tab text="Buscar Menu">
