--- a/src/VentanaAux/EstudianteMenu.fxml
+++ b/src/VentanaAux/EstudianteMenu.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -17,7 +19,18 @@
    <tabs>
       <Tab text="Menu">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #E7CA9A;" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #E7CA9A;">
+               <children>
+                  <TableView fx:id="tablaMenu" layoutY="45.0" prefHeight="279.0" prefWidth="600.0">
+                     <columns>
+                        <TableColumn fx:id="colNombre" prefWidth="119.0" text="Nombre" />
+                        <TableColumn fx:id="colDes" prefWidth="232.0" text="Descripción" />
+                        <TableColumn fx:id="colTipo" prefWidth="65.0" text="Tipo" />
+                        <TableColumn fx:id="colDia" prefWidth="98.0" text="Dia" />
+                        <TableColumn fx:id="colPrecio" prefWidth="83.0" text="Precio" />
+                     </columns>
+                  </TableView>
+               </children></AnchorPane>
         </content>
       </Tab>
       <Tab text="Sugerir Menu">
